// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`job cancel modal tests snapshot test - bulk cancel 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[MockFunction]}
        variant="primary"
      >
        OK
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="Job Cancel Modal"
  aria-labelledby="Job Cancel Modal"
  className=""
  data-ouia-component-type="jobs-cancel-modal"
  data-ouia-safe={true}
  hasNoBodyWrapper={false}
  header={
    <Title
      headingLevel="h1"
      size="2xl"
    >
      <InfoCircleIcon
        className="pf-u-mr-sm"
        color="var(--pf-global--info-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      <span>
        Job cancel
      </span>
    </Title>
  }
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <mockConstructor />
</Modal>
`;

exports[`job cancel modal tests snapshot test - single cancel 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[MockFunction]}
        variant="primary"
      >
        OK
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label="Job Cancel Modal"
  aria-labelledby="Job Cancel Modal"
  className=""
  data-ouia-component-type="jobs-cancel-modal"
  data-ouia-safe={true}
  hasNoBodyWrapper={false}
  header={
    <Title
      headingLevel="h1"
      size="2xl"
    >
      <InfoCircleIcon
        className="pf-u-mr-sm"
        color="var(--pf-global--info-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      <span>
        Job cancel
      </span>
    </Title>
  }
  isOpen={true}
  onClose={[MockFunction]}
  ouiaSafe={true}
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <TextContent>
    <Text>
      The job was cancelled successfully
    </Text>
  </TextContent>
</Modal>
`;
